new blog chnges

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <img src="Aaponic_final.png" alt="">
     <img src="image_selected/pexels-photo-1130174.jpeg" alt="">
     <h4>thanks Indeed</h4>
+    <h5>new blog is ready to cook</h5>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas suscipit omnis minima in vero nisi dignissimos quis consequuntur, dolor earum fuga quisquam. Facere aperiam suscipit perferendis nisi corrupti nemo quidem asperiores, sed, iste architecto culpa dolorem reiciendis provident autem officia?
+    </p>
     <img src="pexels-photo-356192.jpeg" alt="">
 </body>
 </html>
